tests/machine/x/ocaml/group_by.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by.ml", line 36, characters 39-41:
36 | let people = [[("name","Alice");("age",30);("city","Paris")];[("name","Bob");("age",15);("city","Hanoi")];[("name","Charlie");("age",65);("city","Paris")];[("name","Diana");("age",45);("city","Hanoi")];[("name","Eve");("age",70);("city","Paris")];[("name","Frank");("age",22);("city","Hanoi")]]
                                            ^^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let people = [[("name","Alice");("age",30);("city","Paris")];[("name","Bob");("age",15);("city","Hanoi")];[("name","Charlie");("age",65);("city","Paris")];[("name","Diana");("age",45);("city","Hanoi")];[("name","Eve");("age",70);("city","Paris")];[("name","Frank");("age",22);("city","Hanoi")]]
  37 | let stats = (let __res0 = ref [] in
  38 |   List.iter (fun person ->
